select action for student assignment

--- a/src/School/UserBundle/Resources/views/Admin/AssignStudents.html.twig
+++ b/src/School/UserBundle/Resources/views/Admin/AssignStudents.html.twig
@@ -2,24 +2,23 @@
 
 {% block title %}Assign Students{% endblock %}
 
-{% block header_javascripts %}
+{# {% block header_javascripts %}
 {{ parent() }}
 <script type="text/javascript" src="{{ asset('bundles/schooluser/js/SchoolClassTest.js') }}"></script>
-{% endblock %}
+{% endblock %} #}
 
 {% block body %}
 <div class="container-fluid">
 
     <h2> Assign Students </h2><br/>
 
-    
+    {{ form_start(form) }}
     <div class="row">
-        <div class="col-md-8">
-            {{ form_start(form) }}
-                {{ form_errors(form) }}
-                {{ form_label(form.assigned) }}
-                {{ form_errors(form.assigned) }}
-                {{ form_widget(form.assigned) }}          
+        <div class="col-md-8">        
+            {{ form_errors(form) }}
+            {{ form_label(form.assigned) }}
+            {{ form_errors(form.assigned) }}
+            {{ form_widget(form.assigned) }}          
         </div>
         <div class="col-md-4"> </div>        
     </div>
@@ -30,15 +29,13 @@
             {{ form_errors(form.schoolClass) }}
             {{ form_widget(form.schoolClass) }}
             
-            {{ form_widget(form.update)  }}
-            
-            {{ form_end(form) }}
-        
+            {{ form_widget(form.update)  }}       
         </div>
     </div>
-
+    {{ form_end(form) }}
     
     <div class="row">
+        <form action="{{ path('admin_selected_students') }}" method="post">
         <table class="table table-hover">
         <thead>
         <tr>
@@ -48,6 +45,7 @@
             <th> Select </th>
         </tr>
         </thead>
+        
         {%  for student in students %}
             <tbody>
             <tr>
@@ -56,20 +54,18 @@
                 <td> {% if student.schoolClass is not null %}
                         {{ student.schoolClass.name }} - {{ student.schoolClass.schoolYear }}
                     {% endif %}</td>
-                <td> <form action="{{ path('admin_test_assigned_students') }}"method="post"> <input type="checkbox" name="select[]" value="{{ student.user.id }}"> </td>
+                <td> <input type="checkbox" name="select[]" value="{{ student.user.id }}"> </td>
             </tr>
             </tbody>
         {% endfor %}
 
         </table>
-        <input type="submit" name="submit" value="Submit"></form>
-        {# {{ form_start(form) }}
-            {{ form_row(form.schoolYear) }}    
-            {{ form_row(form.name) }} 
-            {{ form_row(form.students) }}
-            {{ form_row(form.save) }}
-
-        {{ form_end(form) }} #}
+        <select required name="studentAction">
+        <option value=""> - Select an action </option>
+        <option value="assignment">Assign to a class </option>
+        </select>
+        <input type="submit" name="submit" value="Submit">
+        </form>
     </div>
 </div>
 
