Fixed knp menu integration with bootstrap

--- a/src/School/UserBundle/Resources/views/Login/login_success.html.twig
+++ b/src/School/UserBundle/Resources/views/Login/login_success.html.twig
@@ -1,4 +1,4 @@
-{% extends '::base.html.twig' %}
+{% extends 'SchoolUserBundle::base.html.twig' %}
 
 {% block body %}
 <p>Logged in successfully as {{ app.user.username }}</p>
