--- a/src/School/UserBundle/Resources/views/Login/homepage.html.twig
+++ b/src/School/UserBundle/Resources/views/Login/homepage.html.twig
@@ -1,5 +1,6 @@
-{% extends '::base.html.twig' %}
+{% extends 'SchoolUserBundle::base.html.twig' %}
 
 {% block body %}
 <h3>Welcome to the Homepage!</h3>
+
 {% endblock %}
