--- a/src/School/UserBundle/Resources/views/Admin/AssignStudents.html.twig
+++ b/src/School/UserBundle/Resources/views/Admin/AssignStudents.html.twig
@@ -18,63 +18,84 @@
         </div>
     {% endfor %}
 
-    {{ form_start(form) }}
+    <h4> Filter Students </h4>
+    {{ form_start(form, {'attr': {'class': 'form-horizontal'}}) }}
+    
     <div class="row">
-        <div class="col-md-8">        
-            {{ form_errors(form) }}
-            {{ form_label(form.assigned) }}
-            {{ form_errors(form.assigned) }}
-            {{ form_widget(form.assigned) }}          
+        <div class="col-md-8">
+            <div class="form-group">        
+                {{ form_label(form.assigned, 'By class assignment', {'label_attr': {'class': 'col-sm-2 control-label'}}) }}
+                {{ form_errors(form.assigned) }}
+                <div class="col-sm-4">
+                    {{ form_widget(form.assigned, {'attr': {'class': 'form-control'}}) }} 
+                </div>
+            </div>
         </div>
-        <div class="col-md-4"> </div>        
     </div>
     
     <div class="row">
         <div class="col-md-8">
-            {{ form_label(form.schoolClass) }}
-            {{ form_errors(form.schoolClass) }}
-            {{ form_widget(form.schoolClass) }}
-            
-            {{ form_widget(form.update)  }}       
+            <div class="form-group">
+                {{ form_label(form.schoolClass, 'By class', {'label_attr': {'class': 'col-sm-2 control-label'}}) }}
+                {{ form_errors(form.schoolClass) }}
+                <div class="col-sm-4">
+                    {{ form_widget(form.schoolClass, {'attr': {'class': 'form-control'}}) }}
+                </div>
+            </div>
         </div>
     </div>
+    
+    <div class="row">
+        <div class="col-md-4"> 
+            <div class="form-group">
+                <div class="col-sm-offset-4 col-sm-4">
+                    {{ form_widget(form.update, {'attr': {'class': 'btn btn-default'}})  }}
+                </div>
+            </div>
+        </div>
+    </div>
+        
     {{ form_end(form) }}
     
     <div class="row">
-        <form action="{{ path('admin_selected_students') }}" method="post">
-        <table class="table table-hover">
-        <thead>
-        <tr>
-            <th>  Full Name  </th>
-            <th> Username </th>
-            <th>  Class  </th>
-            <th> <input type="checkbox"  id="selectall"/> Select All </th>
-        </tr>
-        </thead>
-        
-        {%  for student in students %}
-            <tbody>
-            <tr>
-                <td> <a href="{{ path('admin_user_edit', {'userId': student.user.id }) }}"> {{ student.user.lastName }} {{ student.user.firstName }} </a></td>
-                <td> {{ student.user.username }} </td>
-                <td> {% if student.schoolClass is not null %}
-                        {{ student.schoolClass.name }} - {{ student.schoolClass.schoolYear }}
-                    {% endif %}</td>
-                <td> <input class="checkboxstudents" type="checkbox"  name="select[]" value="{{ student.user.id }}"> </td>
-            </tr>
-            </tbody>
-        {% endfor %}
-
-        </table>
-        <select required name="studentAction">
-        <option value=""> - Select an action </option>
-        <option value="assignment">Assign to a class </option>
-        <option value="removal"> Remove from a class </option>
-        </select>
-        <input type="submit" name="submit" value="Submit">
-        </form>
-        
+        <form action="{{ path('admin_selected_students') }}" method="post" role="form">        
+            <table class="table table-hover">
+                <thead>
+                    <tr>
+                        <th>  Full Name  </th>
+                        <th> Username </th>
+                        <th>  Class  </th>
+                        <th> <input type="checkbox"  id="selectall"/> Select All </th>
+                    </tr>
+                </thead>
+            
+                {%  for student in students %}
+                <tbody>
+                    <tr>
+                        <td> <a href="{{ path('admin_user_edit', {'userId': student.user.id }) }}"> {{ student.user.lastName }} {{ student.user.firstName }} </a></td>
+                        <td> {{ student.user.username }} </td>
+                        <td> {% if student.schoolClass is not null %}
+                                {{ student.schoolClass.name }} - {{ student.schoolClass.schoolYear }}
+                            {% endif %}</td>
+                        <td> <input class="checkboxstudents" type="checkbox"  name="select[]" value="{{ student.user.id }}"> </td>
+                    </tr>
+                </tbody>
+                {% endfor %}
+            </table>
+            
+            <div class="form-group">
+            <div class="col-sm-3">
+                <select required name="studentAction" class="form-control">
+                    <option value=""> - Select an action - </option>
+                    <option value="assignment">Assign to a class </option>
+                    <option value="removal"> Remove from a class </option>
+                </select>
+            </div>
+            </div>
+            <input type="submit" name="submit" value="Submit" class="btn btn-default">
+        </form>        
     </div>
+    
 </div>
 
 {% endblock %}
