--- a/src/School/UserBundle/Resources/views/Teacher/AddExam.html.twig
+++ b/src/School/UserBundle/Resources/views/Teacher/AddExam.html.twig
@@ -103,6 +103,6 @@
             {% endfor %}
         </ol>  
         {{ form_widget(form.save, {'attr': {'class': 'btn btn-default'}})  }}
-    {{ form_end(form, {'render_rest': false}) }}
+    {{ form_end(form) }}
 </div>  
 {% endblock %}
