--- a/src/School/UserBundle/Resources/views/Teacher/AddLecture.html.twig
+++ b/src/School/UserBundle/Resources/views/Teacher/AddLecture.html.twig
@@ -22,7 +22,7 @@
 
 {% block body %}
 <div class="container-fluid">
-    <h3> Add/Remove Lectures for {{ course.course }} </h3>
+    <h3> Add/Remove Lectures for {{ course.name }} </h3>
 
     {{ form_start(form, {'attr': {'class': 'form-horizontal'}}) }}       
               
