--- a/src/School/UserBundle/Resources/views/Admin/ListUsers.html.twig
+++ b/src/School/UserBundle/Resources/views/Admin/ListUsers.html.twig
@@ -4,24 +4,27 @@
 {% block body %}
 <div class="container-fluid">
     <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-8">
             <h2>List of Users</h2>
             <table class="table table-hover">
                     <tr>
-                        <th>Username</th>
-                        <th>Roles</th>
+                        <th> Last Name </th>
+                        <th> First Name </th>
+                        <th> Username </th>
+                        <th> Role </th>
+                        <th> </th>
                     </tr>
                     
-                        {% for u in users_view %}
-                            <tr>
-                            <td><a href="{{ path('admin_user_edit', {'userId': u.id }) }}"> {{u.username}}</a></td>
-                             <td>   {{ u.name }} </td>
-                                {# {% for r in u.role %}
-                                <td>{{r.name}}</td>
-                                {% endfor %} #}
+                    {% for u in users %}
+                        <tr>
+                            <td> {{u.lastName}} </td>
+                            <td> {{ u.firstName }} </td>
+                            <td> {{ u.username }} </td>                            
+                            <td> {% if u.role is not null %}  {{ u.role.name }} {% endif %}</td>
                             
-                            </tr>
-                        {% endfor %}
+                            <td> <a href="{{ path('user_edit', {'userId': u.id }) }}"> Edit </a></td>
+                        </tr>
+                    {% endfor %}
             </table>
         </div>
         <div class="col-md-6"></div>
