--- a/src/School/UserBundle/Resources/views/Student/Exam.html.twig
+++ b/src/School/UserBundle/Resources/views/Student/Exam.html.twig
@@ -1,11 +1,11 @@
 {% extends 'SchoolUserBundle::base.html.twig' %}
 {% form_theme form 'SchoolUserBundle:Form:bootstrap_form.html.twig' %}
 
-{% block title %} {{ exam.name }}{% endblock %}
+{% block title %} {{ assigned_exam.exam.name }}{% endblock %}
 
 {% block body %}
 <div class="container-fluid">
-    <h3> {{ exam.name }} </h3>
+    <h3> {{ assigned_exam.exam.name }} </h3>
     
     <ol>
         {{ form(form) }}
