--- a/src/School/UserBundle/Resources/views/Teacher/AddAssignedExam.html.twig
+++ b/src/School/UserBundle/Resources/views/Teacher/AddAssignedExam.html.twig
@@ -1,4 +1,5 @@
 {% extends 'SchoolUserBundle::base.html.twig' %}
+{% form_theme form 'SchoolUserBundle:Form:form_errors.html.twig' %}
 
 {% block stylesheets %}
     {{ parent() }}
@@ -63,7 +64,7 @@
                 </div>
             </div>
         </div>
-        
+        {{ form_errors(form) }}
         {{ form_widget(form.save, {'attr': {'class': 'btn btn-default'}})  }}
     {{ form_end(form) }}
     
@@ -72,11 +73,11 @@
 {% endblock %}
 
 {% block javascripts %}
-{{ parent() }}
-<script type="text/javascript">
-            $(function() {
-                $('#datetimepicker1').datetimepicker();
-                $('#datetimepicker2').datetimepicker();
-            });
-        </script>
+    {{ parent() }}
+    <script type="text/javascript">
+        $(function() {
+        $('#datetimepicker1').datetimepicker();
+        $('#datetimepicker2').datetimepicker();
+    });
+    </script>
 {% endblock %}
