--- a/src/School/UserBundle/Resources/views/Teacher/EditAssignedExam.html.twig
+++ b/src/School/UserBundle/Resources/views/Teacher/EditAssignedExam.html.twig
@@ -1,4 +1,5 @@
 {% extends 'SchoolUserBundle::base.html.twig' %}
+{% form_theme form 'SchoolUserBundle:Form:form_errors.html.twig' %}
 
 {% block stylesheets %}
     {{ parent() }}
@@ -60,6 +61,7 @@
         </div>
         
         {{ form_widget(form.save, {'attr': {'class': 'btn btn-default'}})  }}
+        {{ form_errors(form) }}
     {{ form_end(form) }}
     
         
