--- a/src/School/UserBundle/Resources/views/Teacher/ListExams.html.twig
+++ b/src/School/UserBundle/Resources/views/Teacher/ListExams.html.twig
@@ -7,7 +7,7 @@
     <h3> Exams for {{ course.name }} - {{ class.name }}</h3>
     
     <p class="text-right">
-        <a href="{{ path('teacher_add_exam', { 'course_id': course.id }) }}"> Add an exam </a>
+        <a href="{{ path('teacher_add_exam', { 'course_id': course.id, 'class_id': class.id }) }}"> Add an exam </a>
     </p>
     
     <table class="table table-hover">
