--- a/src/School/UserBundle/Resources/views/Teacher/EditAssignedExam.html.twig
+++ b/src/School/UserBundle/Resources/views/Teacher/EditAssignedExam.html.twig
@@ -21,24 +21,13 @@
     
     
     {{ form_start(form) }}
-        
-        <div class="row">
-            <div class='col-md-2'>
-                <div class="form-group">
-                    {{ form_label(form.dateCreated) }}
-                    {{ form_errors(form.dateCreated) }}
-                    {{ form_widget(form.dateCreated, {'attr': {'class': 'form-control' }}) }}
-                </div>
-            </div>
-        </div>
-        
         <div class="row">
             <div class='col-md-2'>
                 <div class="form-group">
                     {{ form_label(form.start) }}
                     {{ form_errors(form.start) }}
                     <div class='input-group date' id='datetimepicker1'>
-                        {{ form_widget(form.start, {'attr': {'class': 'form-control' }}) }}
+                        {{ form_widget(form.start, {'attr': {'class': 'form-control', 'data-date-format': 'DD/MM/YYYY HH:mm'}}) }}
                         <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span>
                         </span>
                     </div>
@@ -52,7 +41,7 @@
                     {{ form_label(form.stop) }}
                     {{ form_errors(form.stop) }}
                     <div class='input-group date' id='datetimepicker2'>
-                        {{ form_widget(form.stop, {'attr': {'class': 'form-control' }}) }}
+                        {{ form_widget(form.stop, {'attr': {'class': 'form-control', 'data-date-format': 'DD/MM/YYYY HH:mm' }}) }}
                         <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span>
                         </span>
                     </div>
@@ -60,6 +49,19 @@
             </div>
         </div>
         
+        <div class="row">
+            <div class='col-md-2'>
+                <div class="form-group">
+                    {{ form_label(form.duration) }}
+                    {{ form_errors(form.duration) }}
+                    <div class='input-group date' id='datetimepicker3'>
+                        {{ form_widget(form.duration, {'attr': {'class': 'form-control', 'data-date-format': 'HH:mm'}}) }}
+                        <span class="input-group-addon"><span class="glyphicon glyphicon-time"></span>
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </div>
         {{ form_widget(form.save, {'attr': {'class': 'btn btn-default'}})  }}
         {{ form_errors(form) }}
     {{ form_end(form) }}
@@ -74,6 +76,9 @@
             $(function() {
                 $('#datetimepicker1').datetimepicker();
                 $('#datetimepicker2').datetimepicker();
+                $('#datetimepicker3').datetimepicker({
+                    pickDate: false
+                });
             });
         </script>
 {% endblock %}
