--- a/src/School/UserBundle/Resources/views/Student/Exam.html.twig
+++ b/src/School/UserBundle/Resources/views/Student/Exam.html.twig
@@ -1,14 +1,48 @@
 {% extends 'SchoolUserBundle::base.html.twig' %}
 {% form_theme form 'SchoolUserBundle:Form:bootstrap_form.html.twig' %}
 
+{% block header_javascripts %}
+    {{ parent() }}
+    <script type="text/javascript" src="{{ asset('bundles/schooluser/vendor/countdown/countdown.min.js') }}" > </script>
+{% endblock %}
+    
 {% block title %} {{ assigned_exam.exam.name }}{% endblock %}
 
 {% block body %}
 <div class="container-fluid">
-    <h3> {{ assigned_exam.exam.name }} </h3>
+    <h3 > {{ assigned_exam.exam.name }} </h3> 
+
     
+    <p id="countdown" class="text-right"> </p>
     <ol>
-        {{ form(form) }}
+        {{ form(form) }}    
     </ol>
+    
+    {% if taken_exam is null %}
+        {% set endTime = endTime|date("m/d/Y H:i:s") %}
+    {% else %}
+        {% set endTime = taken_exam.endTime|date("m/d/Y H:i:s") %}
+    {% endif %}
+
+    <input hidden type="text" id="end_time" value="{{ endTime }}" />
+    
 </div>
+
 {% endblock %}
+
+
+{% block javascripts %}
+    {{ parent() }}
+     <script type="text/javascript">  
+     
+        var end_time = document.getElementById("end_time").value;
+        var clock = document.getElementById("countdown")
+            , targetDate = new Date(end_time.replace(/-/g,"/")); 
+
+        clock.innerHTML = countdown(targetDate).toString();
+        setInterval(function(){
+            clock.innerHTML = countdown(targetDate).toString();
+        }, 1000);
+               
+    </script>
+{% endblock %} 
