--- a/src/School/UserBundle/Resources/views/Teacher/ListExams.html.twig
+++ b/src/School/UserBundle/Resources/views/Teacher/ListExams.html.twig
@@ -15,9 +15,9 @@
             <tr>
                 <th> Exam </th>
                 <th> Assigned </th>
-                <th> Assignment Date </th>
                 <th> Start Time </th>
                 <th> Stop Time </th>
+                <th> Exam Duration </th>
                 <th> Edit Exam</th>
             </tr>
         </thead>
@@ -26,13 +26,34 @@
             {% for exam in exams %} 
                 <tr> 
                     <td> {{ exam.name }} </td>                    
-                    <td> {% for assignedExam in exam.assignedExams %} {% if assignedExam.schoolClass.id == class.id %}Yes  {% endif %}{% endfor %}</td>
-                    <td>  {% for assignedExam in exam.assignedExams %} {% if assignedExam.schoolClass.id == class.id %} {{ assignedExam.dateCreated|date("m/d/Y") }} {% endif %} {% endfor %}</td>
-                    <td> {% for assignedExam in exam.assignedExams %} {% if assignedExam.schoolClass.id == class.id %} {{ assignedExam.start|date( 'H:i:s') }} - 
-                            <a href="{{ path('teacher_edit_assigned_exam', {'assignedExam_id': assignedExam.id, 'course_id': course.id, 'class_id': class.id }) }}"> Edit </a> {% endif %} {% endfor %}
+                    <td> 
+                        {% for assignedExam in exam.assignedExams %} 
+                            {% if assignedExam.schoolClass.id == class.id %} Yes  
+                            {% endif %}
+                        {% endfor %}
                     </td>
-                    <td> {% for assignedExam in exam.assignedExams %} {% if assignedExam.schoolClass.id == class.id %} {{ assignedExam.stop|date( 'H:i:s') }} - 
-                            <a href="{{ path('teacher_edit_assigned_exam', {'assignedExam_id': assignedExam.id, 'course_id': course.id, 'class_id': class.id }) }}"> Edit </a> {% endif %}{% endfor %}
+                    <td> 
+                        {% for assignedExam in exam.assignedExams %}
+                            {% if assignedExam.schoolClass.id == class.id %} 
+                                {{ assignedExam.start|date("d/m/Y \\a\\t g:ia") }} - 
+                                <a href="{{ path('teacher_edit_assigned_exam', {'assignedExam_id': assignedExam.id, 'course_id': course.id, 'class_id': class.id }) }}"> Edit </a> 
+                            {% endif %} 
+                        {% endfor %}
+                    </td>
+                    <td> 
+                        {% for assignedExam in exam.assignedExams %} 
+                            {% if assignedExam.schoolClass.id == class.id %} 
+                                {{ assignedExam.stop|date("d/m/Y \\a\\t g:ia") }} - 
+                                <a href="{{ path('teacher_edit_assigned_exam', {'assignedExam_id': assignedExam.id, 'course_id': course.id, 'class_id': class.id }) }}"> Edit </a>
+                            {% endif %}
+                        {% endfor %}
+                    </td>
+                    <td>
+                        {% for assignedExam in exam.assignedExams %}
+                            {% if assignedExam.schoolClass.id == class.id %} 
+                                {{ assignedExam.duration|date( 'H:i')  }} hours
+                            {% endif %}
+                        {% endfor %}
                     </td>
                     <td> <a href="{{ path('teacher_edit_exam', {'exam_id': exam.id, 'class_id': class.id}) }}"> Edit </a> </td>
                 </tr>
